--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -3,22 +3,23 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 95vh;
   text-align: center;
-  padding: 2rem;
-  line-height: 1.6;
-  font-size: 1.2rem;
+  padding: 1rem; 
+  line-height: 1.4;
+  font-size: 1.4rem; 
 }
 
 .title {
-  margin-bottom: 30px;
-  font-size: 2rem;
+  margin-bottom: 20px; 
+  font-size: 2.5rem; 
+  color: #0070f3; 
 }
 
 .list {
   display: flex;
   justify-content: space-around;
-  gap: 30px;
+  gap: 20px; 
   width: 100%;
 }
 
@@ -26,18 +27,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid #ddd;
-  padding: 30px;
-  border-radius: 8px;
-  background-color: #f5f5f5;
+  border: 2px solid #0070f3; 
+  padding: 1.5rem; 
+  border-radius: 20px;
+  background-color: #e5e5ff; 
   transition: background-color 0.3s;
 }
 
 .list-item:hover {
-  background-color: #ddd;
+  background-color: #cfd8ff; 
 }
 
 .list-item p {
-  margin-top: 10px;
-  font-size: 16px;
+  margin-top: 5px; 
+  font-size: 18px; 
 }
